welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:8: error: unclosed character literal
	return 'a+b' 
                   ^teenSum:6: error: illegal start of simple expression
	}else[
             ^